add numbers and operations

--- a/index.html
+++ b/index.html
@@ -10,8 +10,31 @@
     <div class="container"> 
 <!-- implementing Display Text Area -->
        <div class="calc-text">
-        <p id="user-input" name="user">0</p>
-    </div>
+        <p id="user-input" name="user">5</p>
+       </div>
+    
     <script src="./js/script.js"></script>
+    <div class="calc-keys">
+      <button>AC</button>
+      <button>DEL</button>
+      <button>%</button>
+      <button>/</button>
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button>*</button>
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>-</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>+</button>
+      <button>0</button>
+      <button>.</button>
+      <button>=</button>
+    </div>
+    </div>
 </body>
 </html>
