--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
+  <div class="calculator-grid">
+    <div class="output">
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
     </div>
@@ -30,6 +32,6 @@
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
   </div>
-  <script src="./js/script.js"></script>
+  <script src="./js/scripts.js"></script>
 </body>
 </html>
